syntax = "proto3";
package server;
option go_package = "./api/server";
import "google/api/annotations.proto";


service FarmerService {
  rpc SelectFarmer(FarmerReq) returns(FarmerRsp){
    option (google.api.http) = {
      post: "/FarmerService/SelectFarmer"
      body: "*"
    };
  }
}

message FarmerReq{
  string Name = 1;
  string PassWord = 2;
}

message FarmerRsp {
  string Result = 1;
}