syntax = "proto3";
package server;
option go_package = "./api/server";
import "google/api/annotations.proto";


service GroundService {
  rpc SelectGround(GroundReq) returns(GroundRsp){
    option (google.api.http) = {
      post: "/GroundService/SelectGround"
      body: "*"
    };
  }
}

message GroundReq{
  string Kind = 1;
  string Owner = 2;
}

message GroundRsp {
  string Position = 1;
  string Owner = 2;
  int64 Price = 3;
}